src/test/deca/context/invalid/class/surcharge/return_other_classe.deca
// Description:
//    Héritage d'une classe
//
// Resultats:
//    Wrong return type

class C {}

class A {
	A m() {}
}

class B extends A {
	C m() {}
}

{

}

